# inclusive-job-ad-analyser

./: .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py  setup.py  setup.sh
config/: settings.yaml
data/: bias_terms.csv
docs/: CONTRIBUTING.md  DEPLOYMENT.md  METHODOLOGY.md  QUICKSTART.md  WEB_INTERFACE_GUIDE.md
examples/: biased_job_ad.md  job_urls.txt  neutral_job_ad.md
src/inclusive_job_ad_analyser/: __init__.py  __main__.py  analyser.py  cli.py  loaders.py  models.py  reporting.py  scoring.py  scraper.py  webapp.py
tests/: __init__.py  conftest.py  test_analyser.py  test_integration.py  test_scoring.py  test_scraper.py
